app/assets/stylesheets/chrome.css
/* ... */
.flash.notice:after {
  content: "✔";
  color: #00aaff;
}
.flash.error:after {
  content: "☠";
  color: #F61359;
}

/* Feature Popup - Social Buttons */
.information-panel .social {
     -moz-box-shadow: -4px 4px 0 rgba(85, 85, 85, 0.5);
  -webkit-box-shadow: -4px 4px 0 rgba(85, 85, 85, 0.5);
          box-shadow: -4px 4px 0 rgba(85, 85, 85, 0.5);
}
.social form.vote button[type=submit] {
  background-color: #e4e4e4;
  color: #444;
  border: 1px solid #a8a8a8;
  font-weight: bold;
  font-size: auto;
  font-size: 0.8em;
  height: 3em;
  line-height: 2.5em;
  margin: 15px;
  padding: 0.3em 1.2em;
  text-align: center;
  white-space: nowrap;
  float: left;
  text-shadow: none;
     -moz-box-shadow: -4px 4px 0 rgba(85, 85, 85, 0.5);
  -webkit-box-shadow: -4px 4px 0 rgba(85, 85, 85, 0.5);
          box-shadow: -4px 4px 0 rgba(85, 85, 85, 0.5);
}
.social form.vote button[type=submit].supported {
  background-color : #C1DFF1;
}
.social form.vote button[type=submit] span {
  font-weight: bold;
  color: #f61359;
  padding    : 6px 0 6px 25px;
}
.social form.vote button[type=submit] span {
  background : transparent url(thumbs-up-gray.png) no-repeat scroll top left;
}
.social form.vote button[type=submit].supported span {
  background : transparent url(thumbs-up.png) no-repeat scroll top left;
}

.social .sharing {
  float: left;
  width: 155px;
  margin: 1em 0 0 0;
}
.social .sharing ul,
.social .sharing li {
  margin: 0;
}
.social .sharing li a {
  float: left;
  width: 22px;
  height: 20px;
  margin: 0 10px 5px 0;
  text-indent: -10000px;
}
.social .sharing li a.twitter {
  background: url("twitter.gif") no-repeat scroll 0 0 transparent;
  width: 62px;
}
.social .sharing li a.facebook {
  background: url("facebook.gif") no-repeat scroll 0 0 transparent;
  width: 92px;
}
.social .sharing li a.email {
  background: url("mail.png") no-repeat scroll 0 0 transparent;
  clear: left;
}
.social .sharing li a.link {
  background: url("link.png") no-repeat scroll 0 0 transparent;
}

.social .sharing .copy-link-container {
  position: relative;
}

.social .sharing .copy-link {
  z-index: 10002;
  position: absolute;
  color: #444;
  border: 1px solid #DDD;
  font-size: 0.8em;
  left: 32px;
  width:150px;
  top: -1px;
  padding: 3px;
  outline-width: 0;
  display: none;
}

.social .sharing .copy-link:before {
  content: "";
  border-color: transparent #DDD transparent transparent;
  border-style: solid;
  border-width: 6px;
  height:0;
  width:0;
  position:absolute;
  top:4px;
  left:-13px;
}
.social .sharing .copy-link:after {
  content: "";
  border-color: transparent #fff transparent transparent;
  border-style: solid;
  border-width: 6px;
  height:0;
  width:0;
  position:absolute;
  top:4px;
  left:-12px;
}


/*
 *
 * News Ticker
 *
 */
#ticker {
  display : none;
     -moz-box-shadow: -4px 0 0 rgba(85, 85, 85, 0.5);
  -webkit-box-shadow: -4px 0 0 rgba(85, 85, 85, 0.5);
          box-shadow: -4px 0 0 rgba(85, 85, 85, 0.5);
}
#content.ticker_on #map-container {
  right : 14em;
}
#content.ticker_on #ticker {
  display  : block;
  position : absolute;
  width    : 14em;
  bottom   : 0;
  right    : 0;
  top      : 0;
  z-index  : 10000;
  overflow : auto;
  background-color: #CDE4F1;
  text-align: center;
}

#ticker #intro {
  padding: 1em 0.2em 0;
}

#ticker #intro p {
  margin-top: 1em;
}
#ticker ul {
  background-color: #E4E6E6;
  margin: 0;
  text-align: left;
}
#ticker ul a {
  color           : #395A7F;
  text-decoration : none;
  display         : block;
  padding: 10px 10px 10px 45px;
  position: relative;
  z-index: 10;
}
#ticker ul a:hover {
  color: #444;
}
#ticker li {
  padding: 0;
  min-height    : 25px;
  border-color  : #AACBE0;
  border-style  : solid;
  border-width  : 1px 0;
  font-size     : 0.8em;
  margin-bottom : 0;
  position: relative;
}
#ticker li.loading > div {
  margin : 1em auto;
  width  : 13px;
}
#ticker .avatar {
  width: 28px;
  height: 28px;
  text-align: right;
  margin: 10px 0 10px 10px;
  z-index: 5;
}
#ticker .avatar img {
  width: 28px;
}
#ticker div.badge {
  width: 16px;
  height: 16px;
  position: absolute;
  top: 20px;
  right: 18px;
}
#ticker div.badge.feature_point {
  background : transparent url('ticker-bike-plus.png') no-repeat scroll center center;
}
#ticker div.badge.vote {
  background : transparent url('ticker-thumbs-up.png') no-repeat scroll center center;
}
#ticker div.badge.comment {
  background : transparent url('ticker-comment.png') no-repeat scroll center center;
}

/* HiderSlider Widget */
.ui-hiderslider-container .ui-widget-content { background: #eeeeee 50% top repeat-x; }
.ui-hiderslider-container .ui-state-default, .ui-hiderslider-container .ui-widget-content .ui-state-default, .ui-hiderslider-container .ui-widget-header .ui-state-default { background: #f6f6f6 50% 50% repeat-x; }

.ui-hiderslider-container {
  background: #3690CC url("button-gradient.png") center center repeat-x scroll;
  color:#fff;
  padding: 0 30px;
  font-size: 0.8em;
  font-weight: bold;
  -webkit-border-radius: 2px;
     -moz-border-radius: 2px;
          border-radius: 2px;
}
.ui-hiderslider-title {
}
.ui-hiderslider-content {
  /* We leave 1px width to deal with Chrome's fractional pixel problem, but
     that leaves 1px of gray. This blends it in with the container. */
  background: #E4E6E6 url("button-gradient.png") no-repeat left center scroll;
  padding-left:4px;
}
.ui-hiderslider-slider {
  background: transparent url("slider-wedge-greaterthan.gif") no-repeat left center scroll !important;
}
.ui-hiderslider-close {
  display: none;
  width: 14px;
  height: 14px;
  background: url("close-bttn.png") no-repeat scroll 0 0 transparent;
  text-indent: -9999px;
  position: absolute;
  top: 50%;
  right: 10px;
  margin-top: -7px !important;
  cursor: pointer;
}
.ui-hiderslider-container .ui-hiderslider-close:hover {
  background-position: bottom left;
}
/* ... */

